--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,17 @@
   color: #61dafb;
 }
 
+.TitleInput {
+  background-color: #ffffff;
+  height: 20px;
+  width: 30%;
+}
+
+.Inputform {
+  flex-direction: row;
+  width: 100%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
